# weblog

./: Cargo.toml  Makefile  README.md
examples/web-sys/: Cargo.toml  Makefile
examples/web-sys/src/: lib.rs
examples/web-sys/static/: index.html
src/: lib.rs
src/console/: mod.rs  std_web.rs  web_sys.rs
weblog-proc-macro/: Cargo.toml
weblog-proc-macro/src/: lib.rs  weblog_impl.rs
