[package]
name = "weblog"
version = "0.1.0"
authors = ["Rob Watson <rfwatson@users.noreply.github.com>"]
edition = "2018"
description = "weblog is a crate that defines a set of macros for calling `console.log()` and other members of the browser's console API when targeting Wasm."
repository = "https://github.com/rfwatson/weblog"
keywords = ["wasm", "webassembly", "console", "log", "logging"]
license = "MIT OR Apache-2.0"

[lib]
# FIXME: `cargo test` refuses to cross-compile doctests, even with `-Zdoctest-xcompile`.
# E.g.: `cargo test --target wasm32-unknown-unknown -Zdoctest-xcompile`
test = false
doctest = true

[features]
default = ["web_sys"]
web_sys = ["js-sys", "paste", "wasm-bindgen", "web-sys"]
std_web = ["stdweb"]

[dependencies]
js-sys = { version = ">= 0.3", optional = true }
paste = { version = "1.0", optional = true }
stdweb = { version = ">= 0.4", optional = true }
wasm-bindgen = { version = ">= 0.2", optional = true }
web-sys = { version = ">= 0.3", optional = true, features = ["console"] }
