[package]
name = "weblog"
version = "0.4.0-beta.1"
authors = ["Rob Watson"]
edition = "2018"
description = "weblog is a crate that defines a set of macros for calling `console.log()` and other members of the browser's console API when targeting Wasm."
repository = "https://git.netflux.io/rob/weblog"
keywords = ["wasm", "webassembly", "console", "log", "logging"]
license = "MIT OR Apache-2.0"

[lib]
# FIXME: https://github.com/rfwatson/weblog/issues/2
test = false
doctest = true

[features]
default = ["web_sys"]
web_sys = ["web-sys", "wasm-bindgen", "weblog-proc-macro"]
std_web = ["stdweb"]

[dependencies]
stdweb = { version = ">= 0.4", optional = true }
weblog-proc-macro = { path = "./weblog-proc-macro", version = "0.4.0-beta.1", optional = true }
web-sys = { version = "0.3", features = ["console"], optional = true }
wasm-bindgen = { version = "0.2", optional = true }
