[package]
name = "weblog-proc-macro"
version = "0.4.0-beta.1"
authors = ["Rob Watson"]
repository = "https://git.netflux.io/rob/weblog"
description = "weblog is a crate that defines a set of macros for calling `console.log()` and other members of the browser's console API when targeting Wasm."
edition = "2018"
keywords = ["wasm", "webassembly", "console", "log", "logging"]
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
syn = "1.0.41"
quote = "1.0.7"
proc-macro2 = "1.0"
